@@ -1,12 +1,13 @@
-from Testing.ZopeTestCase.utils import setupCoreSessions
 from ftw.builder.testing import BUILDER_LAYER
 from ftw.builder.testing import functional_session_factory
 from ftw.builder.testing import set_builder_session_factory
+from plone.app.testing import applyProfile
 from plone.app.testing import FunctionalTesting
+from plone.app.testing import IntegrationTesting
 from plone.app.testing import PLONE_FIXTURE
 from plone.app.testing import PloneSandboxLayer
-from plone.app.testing import applyProfile
 from plone.testing import z2
+from Testing.ZopeTestCase.utils import setupCoreSessions
 from zope.configuration import xmlconfig
 import ftw.shop.tests.builders
 
@@ -35,3 +36,6 @@ FTW_SHOP_FUNCTIONAL_TESTING = FunctionalTesting(
     bases=(FTW_SHOP_FIXTURE,
            set_builder_session_factory(functional_session_factory)),
     name="ftw.shop:functional")
+
+FTW_SHOP_INTEGRATION_TESTING = IntegrationTesting(
+    bases=(FTW_SHOP_FIXTURE, ), name="ftw.shop:integration")
