@@ -4,7 +4,8 @@ Changelog
 2.0.1 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Implement getting supplier recursively.
+  [mathias.leimgruber]
 
 
 2.0 (2014-07-04)
